deploy: 42f72e6626ea7db4404c00898deab8532b61478b

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="/css/main.css">
+		<link rel="stylesheet" href="/nixtml/css/main.css">
 		<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" name="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
 		<section class="hero">
 			<div class="hero-body">
 				<div class="container is-max-desktop has-text-centered">
-					<img src="/logo.svg">
+					<img src="/nixtml/logo.svg">
 				</div>
 			</div>
 		</section>
