--- a/404.html
+++ b/404.html
@@ -38,5 +38,15 @@
 				</div>
 			</div>
 		</section>
+		<footer class="footer">
+			<div class="content is-max-desktop has-text-centered">
+				<p>
+					This website is (obviously) generated with
+					<a href="https://github.com/arnarg/nixtml">
+						nixtml.
+					</a>
+				</p>
+			</div>
+		</footer>
 	</body>
 </html>
