deploy: adf5bba08fade1e54aa779d1cffa12a792b88029

--- a/options/index.html
+++ b/options/index.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="msapplication-TileColor" name="#da532c">
-		<meta name="theme-color" name="#ffffff">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
 		<link rel="icon" href="/favicon.png">
 		<title>
 			Configuration Options | nixtml
